Bug 368501, Table Properties Windows Cut Off, r=bz, sr=roc